# 3mf-merger

./: .gitignore  Cargo.toml  README.md  demo.html  merge.html  pages-index.html
.github/workflows/: pages.yml
docs/: 3mf-print-customization-checklist.md  luigi-yoshi-inventory.md
openspec/: project.md
openspec/changes/create-3mf-merger/: design.md  proposal.md  tasks.md
openspec/changes/create-3mf-merger/specs/merge-3mf/: spec.md
src/: lib.rs  main.rs  merge.rs  package.rs  rewrite.rs  wasm.rs
tests/: customization_checklist.rs  fixtures.rs  lib3mf_verification.rs  synthetic.rs  wasm_test.rs
