[package]
name = "three-mf-merger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lib3mf = { version = "0.1", default-features = false }
regex = "1.10"
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.10"
thiserror = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
